--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,9 +15,9 @@ jobs:
         submodules: recursive
     - name: install brickstrap
       run: |
-        sudo add-apt-repository ppa:ev3dev/tools
         sudo apt-get update
-        sudo apt-get install --yes --no-install-recommends brickstrap
+        sudo apt-get install --yes --no-install-recommends libguestfs-tools
+        curl -LO https://raw.githubusercontent.com/ev3dev/brickstrap/master/src/brickstrap.sh
     - name: build sling and sinter
       run: ./build_sling.sh
     - name: check the outputs
