--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
     - name: install brickstrap
       run: |
         sudo apt-get update
-        sudo apt-get install --yes --no-install-recommends libguestfs-tools
+        sudo apt-get install --yes --no-install-recommends libguestfs-tools qemu-user-static
         curl -LO https://raw.githubusercontent.com/ev3dev/brickstrap/master/src/brickstrap.sh
     - name: build sling and sinter
       run: ./build_sling.sh
