--- a/Dockerfile.image
+++ b/Dockerfile.image
@@ -1,2 +1,3 @@
 FROM ev3dev/ev3dev-stretch-ev3-base
-RUN ["sudo", "bash", "-c", "apt-get update && apt-get install --yes --no-install-recommends libarchive13"]
+COPY sling sinter_host /usr/local/bin/
+RUN ["bash", "-c", "chmod 755 /usr/local/bin/sling /usr/local/bin/sinter_host"]
