Fix release zip name

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,18 +38,21 @@ jobs:
       uses: actions/create-release@v1
       if: ${{ github.event_name == 'push' }}
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: ${{ github.ref }}
         release_name: ${{ github.ref }}
         body: ""
         draft: true
+    - id: tag_name
+      if: ${{ github.event_name == 'push' }}
+      run: echo ::set-output name=TAG_NAME::${GITHUB_REF#refs/tags/}
     - uses: actions/upload-release-asset@v1
       if: ${{ github.event_name == 'push' }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ./ev3-source.img.zip
-        asset_name: ev3-source-${{ github.ref }}.img.zip
+        asset_name: ev3-source-${{ steps.tag_name.outputs.TAG_NAME }}.img.zip
         asset_content_type: application/zip
