--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,9 +21,13 @@ jobs:
         curl -LO https://raw.githubusercontent.com/ev3dev/brickstrap/master/src/brickstrap.sh
     - name: build sling and sinter
       run: ./build_sling.sh
+    - name: build qrcode generator
+      run: ./build_qrcode.sh
+    - name: build nus login program
+      run: ./build_prompt.sh
     - name: check the outputs
       run: |
-        file build-ev3/sling build-ev3/sinter_host
+        file build-ev3/sling build-ev3/sinter_host file build-ev3/executables/show_qrcode build-ev3/executables/nus_login
     - name: make vmlinuz readable
       run: sudo chmod 755 /boot/vmlinuz*
     - name: build image
