Remove PEAP login from build scripts

--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -12,9 +12,8 @@ RUN ["bash", "-c", "chmod 755 /usr/local/bin/bootstrap.sh && exec /usr/local/bin
 
 # Copy user-executable binaries
 ARG show_qrcode="Show QR Code"
-ARG nus_login="Login to NUS_STU"
-COPY executables/${show_qrcode} executables/${nus_login} /home/robot/
-RUN ["bash", "-c", "chmod 755 \"/home/robot/${show_qrcode}\" \"/home/robot/${nus_login}\""]
+COPY executables/${show_qrcode} /home/robot/
+RUN ["bash", "-c", "chmod 755 \"/home/robot/${show_qrcode}\""]
 
 # Add script to kill a running Source Program
 ARG kill_source="Kill Source Program"
