--- a/Dockerfile.sling
+++ b/Dockerfile.sling
@@ -1,2 +1,19 @@
 FROM ev3dev/debian-stretch-cross
-RUN ["sudo", "bash", "-c", "apt-get update && apt-get install --yes debian-keyring debian-archive-keyring && apt-key update && echo deb http://deb.debian.org/debian stretch-backports main > /etc/apt/sources.list.d/backports.list && echo deb http://deb.debian.org/debian stretch-backports-sloppy main >> /etc/apt/sources.list.d/backports.list && apt-get update && apt-get install --yes --no-install-recommends -t stretch-backports-sloppy libarchive13 && apt-get install --yes --no-install-recommends -t stretch-backports cmake && apt-get install --yes --no-install-recommends libssl-dev:armel"]
+
+# Fix for Debian Stretch end-of-life
+# Adapted from https://stackoverflow.com/a/76095392
+RUN sudo sed -i -e 's/deb.debian.org/archive.debian.org/g' \
+                -e 's/ftp.debian.org/archive.debian.org/g' \
+                -e 's|security.debian.org|archive.debian.org/|g' \
+                -e '/stretch\/updates/d' \
+                -e '/stretch-updates/d' /etc/apt/sources.list
+
+RUN sudo bash -c "apt-get update && \
+                  apt-get install --yes debian-keyring debian-archive-keyring && \
+                  apt-key update && \
+                  echo deb http://archive.debian.org/debian stretch-backports main > /etc/apt/sources.list.d/backports.list && \
+                  echo deb http://archive.debian.org/debian stretch-backports-sloppy main >> /etc/apt/sources.list.d/backports.list && \
+                  apt-get update && \
+                  apt-get install --yes --no-install-recommends -t stretch-backports-sloppy libarchive13 && \
+                  apt-get install --yes --no-install-recommends -t stretch-backports cmake && \
+                  apt-get install --yes --no-install-recommends libssl-dev:armel"
