--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -10,7 +10,7 @@ COPY rtl8812cu-driver/8821cu.ko /lib/modules/4.14.117-ev3dev-2.3.5-ev3/drivers/n
 COPY bootstrap.sh start-sling.sh sling.service panel.service show-secret.sh show-qr.sh /usr/local/bin/
 RUN ["bash", "-c", "chmod 755 /usr/local/bin/bootstrap.sh && exec /usr/local/bin/bootstrap.sh"]
 
-# Copy user-executable binaries
+# Copy QR code generator
 ARG show_qrcode="Show QR Code"
 COPY executables/${show_qrcode} /home/robot/
 RUN ["bash", "-c", "chmod 755 \"/home/robot/${show_qrcode}\""]
