Copy control panel to Docker image

--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -16,6 +16,11 @@ ARG nus_login="Login to NUS_STU"
 COPY executables/${show_qrcode} executables/${nus_login} /home/robot/
 RUN ["bash", "-c", "chmod 755 \"/home/robot/${show_qrcode}\" \"/home/robot/${nus_login}\""]
 
+# Copy control panel
+ARG service_control="Source Academy Settings"
+COPY executables/${service_control} /home/robot/
+RUN ["bash", "-c", "chmod 755 \"/home/robot/${service_control}\""]
+
 # Add script to kill a running Source Program
 ARG kill_source="Kill Source Program"
 COPY executables/${kill_source} /home/robot/
